pypet 0.1b.6

*   v_as_run is not longer None for a trajectory but `run_ALL`

pypet 0.1b5

*   New auto load feature

*   BUG FIX: When parameters are emptied, the default value is set to None (and no longer kept)

*   Now items are only saved once, if the node already exist on disk, storage is refused
    (Previously new data was added if it was not within the leaf before, but this can lead to
    strange inconsistencies).

*   BUG FIX: `f_has_children` of a group node, now returns the correct result

*   Refactored continuing of trajectories. Now this is based on `dill` and works also
    with data that cannot be pickled. `f_continue_run` is renamed `f_continue` to emphasize
    this change in API

*   Picking the search strategy and using `v_check_uniqueness` is no longer supported.
    Sorry for the inconvenience. So forward search will always check if it finds 2 nodes
    with the same name within the same depth, and skip search if the next tree depth is entered.

*   `f_contains` of group nodes has per default `shortcuts=False`

*   There exists now the abstract class `HasLogger` in pypetlogging.py that establishes
    a unified logging framework

*   Likewise the loggers of all network components are now private objects `_logger` and
    so is the function `_set_logger`.

*   BUG FIX: `f_get_run_information` now works without passing any arguments

*   Trajectories no longer accept a `file_tile` on initialisation

*   One can now decide if trajectories should be automatically stored and if
    data should be cleaned up after every run

*   BUG FIX: Storage of individual items during a single run do no longer require
    a full storage of the single run container.

*   If automatic storage is enabled, trajectories are now stored at the end of the experiment,
    no longer before the starting of the single runs

*   You can use the `$` character to decide where the HDF5 file tree should branch out for the
    individual runs
