@@ -2,6 +2,11 @@ pypet 0.1b.6
 
 *   v_as_run is not longer None for a trajectory but `run_ALL`
 
+*   The Queue storage writer now stores batches of single runs to avoid
+    re-opening of files as much as possible
+
+*   Faster Loading of data
+
 pypet 0.1b5
 
 *   New auto load feature
